--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,17 @@
         android:theme="@style/Theme.MP_app"
         tools:targetApi="31" >
         <activity
+            android:name=".L2Act_v2"
+            android:exported="false"
+            android:label="@string/title_activity_l2_act_v2"
+            android:theme="@style/Theme.MP_app.NoActionBar" />
+        <activity
+            android:name=".Fragment_1_Chat_v2"
+            android:exported="false" />
+        <activity
+            android:name=".t"
+            android:exported="false" />
+        <activity
             android:name=".SignInAct"
             android:exported="false" />
         <activity
