--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,25 +14,18 @@
         android:theme="@style/Theme.MP_app"
         tools:targetApi="31" >
         <activity
-            android:name=".L2Act_v2"
+            android:name=".L2_Main.L2Act_v2"
             android:exported="false"
             android:label="@string/title_activity_l2_act_v2"
             android:theme="@style/Theme.MP_app.NoActionBar" />
         <activity
-            android:name=".Fragment_1_Chat_v2"
+            android:name=".Tools.ViewPager.Fragment_1_Chat_v2"
             android:exported="false" />
         <activity
-            android:name=".t"
+            android:name=".L1_Intro.SignInAct"
             android:exported="false" />
         <activity
-            android:name=".SignInAct"
-            android:exported="false" />
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".SignUpAct"
+            android:name=".L1_Intro.SignUpAct"
             android:exported="false" />
         <activity
             android:name=".L2_Main.L2Act"
