fragment - 스와이프 기능 구현중 cameraX - fragment로 구현 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" >
 
-
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -29,7 +28,7 @@
             android:name=".L1_Intro.SignUpAct"
             android:exported="false" />
         <activity
-            android:name=".L2_Main.L2Act"
+            android:name=".Tools.Deprecated.L2Act"
             android:exported="false" />
         <activity
             android:name=".Tools.Deprecated.Fragment_1_Chat"
