--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,12 @@ android {
 }
 
 dependencies {
-    implementation platform('com.google.firebase:firebase-bom:32.6.0')
-    implementation("com.google.firebase:firebase-auth")
-
+    // Add the Firebase dependencies
+    implementation platform('com.google.firebase:firebase-bom:32.0.0')
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-auth:22.0.0'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
