--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
             android:name=".L2_Main.L2Act_v2"
             android:exported="false"
             android:label="@string/title_activity_l2_act_v2"
-            android:theme="@style/Theme.MP_app.NoActionBar" />
+            android:theme="@style/Theme.MP_app.NoActionBar"
+            android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".Tools.ViewPager.Fragment_1_Chat_v2"
+            android:windowSoftInputMode="adjustResize"
             android:exported="false" />
         <activity
             android:name=".L1_Intro.SignInAct"
